tests/profile/error/keybinding/missing_guipath.profile
{
  "version": { "major": 1, "minor": 0 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "name": "T name",
      "is_local": true,
      "script": "T script"
    }
  ]
}
